added image root path

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <table>
         <tr>
             <td>
-                <img src="C:\Users\PRASUN\Downloads\Programs\WEB DEVELOPMENT\HTML SITE\scanner_20210724_114150-modified.png"
+                <img src="scanner_20210724_114150-modified.png"
                 alt="PRASUN PROFILE PIC">
             </td>
             
