--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         <LI>DANCE</LI>
     </OL>
     <hr>
-    <a href="C:\Users\PRASUN\Downloads\Programs\WEB DEVELOPMENT\HTML SITE\my contact.html">my contact</a>
+    <a href="my contact.html">my contact</a>
 </body>
 
 </html>
